@@ -1,3 +1,4 @@
+* Drop support for skiptest attribute on xml files
 * Remove implicit field names in ModelStorage.search_read
 
 Version 5.4.0 - 2019-11-04
